--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,12 +41,17 @@ jobs:
             - run: buildevents cmd $CIRCLE_WORKFLOW_ID $BUILDEVENTS_SPAN_ID lint -- make lint
           # - run: buildevents cmd $CIRCLE_WORKFLOW_ID $BUILDEVENTS_SPAN_ID test -- make test
             - save_go_cache
+            - persist_to_workspace:
+                root: .
+                paths: [ . ]
 
   release:
     executor: go
     steps:
       - buildevents/with_job_span:
           steps:
+            - attach_workspace:
+                at: .
             - run: buildevents cmd $CIRCLE_WORKFLOW_ID $BUILDEVENTS_SPAN_ID native-deps -- sudo apt update && sudo apt install python-is-python3 python3-pip
             - aws-cli/setup:
                 aws-access-key-id: AWS_ACCESS_KEY_ID
