--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,18 +32,15 @@ commands:
           key: cache1-go-mod-{{ checksum "go.sum" }}
           paths:
             - go/pkg/mod
-
   restore_go_cache:
     steps:
       - restore_cache:
           key: cache1-go-mod-{{ checksum "go.sum" }}
-
   build:
     steps:
       - buildevents/berun:
           bename: build
           becommand: make
-
   lint:
     steps:
       - buildevents/berun:
@@ -64,6 +61,7 @@ jobs:
     steps:
       - buildevents/with_job_span:
           steps:
+            - buildevents/start_trace
             - checkout
             - build
             - lint
@@ -72,7 +70,18 @@ jobs:
             - persist_to_workspace:
                 root: .
                 paths: [ . ]
-
+  package:
+    executor: go
+    steps:
+      - buildevents/with_job_span:
+          steps:
+            - checkout
+            - buildevents/berun:
+                bename: packaging
+                becommand: make package
+            - persist_to_workspace:
+                root: .
+                paths: [ . ]
   release:
     executor: go
     steps:
@@ -88,9 +97,6 @@ jobs:
                 aws-secret-access-key: AWS_SECRET_ACCESS_KEY
                 aws-region: AWS_REGION
             - restore_go_cache
-            - buildevents/berun:
-                bename: package
-                becommand: make package
             - buildevents/berun:
                 bename: release
                 becommand: make release
@@ -110,8 +116,13 @@ workflows:
           <<: *filters_always
           requires:
             - setup
+      - package:
+          <<: *filters_always
+          requires:
+            - setup
       - release:
           <<: *filters_publish
           context: Honeycomb Secrets for Public Repos
           requires:
             - build
+            - package
