--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  aws-cli: circleci/aws-cli@0.1.22
+  aws-cli: circleci/aws-cli@1.4.0
   buildevents: honeycombio/buildevents@0.2.7
 
 # enable a job when tag created (tag create is ignored by default)
@@ -26,17 +26,46 @@ executors:
       - image: cimg/go:1.15.8
 
 commands:
+  build:
+    steps:
+      - buildevents/berun:
+          bename: build
+          becommand: make
+  lint:
+    steps:
+      - buildevents/berun:
+          bename: lint
+          becommand: make lint
+  build_packages:
+    steps:
+      - buildevents/berun:
+          bename: build_packages
+          becommand: make package
+  draft_github_release:
+    steps:
+      - buildevents/berun:
+          bename: draft_github_release
+          becommand: make publish_github
+  sync_s3_artifacts:
+    steps:
+      - buildevents/berun:
+          bename: sync_s3_artifacts
+          becommand: make publish_s3
   save_go_cache:
     steps:
       - save_cache:
           key: cache1-go-mod-{{ checksum "go.sum" }}
           paths:
             - go/pkg/mod
-
   restore_go_cache:
     steps:
       - restore_cache:
           key: cache1-go-mod-{{ checksum "go.sum" }}
+  install_ghr:
+    steps:
+      - run:
+          name: Install ghr for drafting GitHub Releases
+          command: go get github.com/tcnksm/ghr
 
 jobs:
   setup:
@@ -52,42 +81,28 @@ jobs:
     steps:
       - buildevents/with_job_span:
           steps:
+            - buildevents/start_trace
             - checkout
-            - buildevents/berun:
-                bename: build
-                becommand: make
-            - buildevents/berun:
-                bename: lint
-                becommand: make lint
-            # - buildevents/berun:
-            #     bename: test
-            #     becommand: make test
+            - build
+            - lint
+            # - test
             - save_go_cache
             - persist_to_workspace:
                 root: .
                 paths: [ . ]
-
   release:
     executor: go
     steps:
       - buildevents/with_job_span:
           steps:
+            - install_ghr
+            - aws-cli/install
+            - aws-cli/setup
             - attach_workspace:
                 at: .
-            - buildevents/berun:
-                bename: native-deps
-                becommand: sudo apt update && sudo apt install python-is-python3 python3-pip
-            - aws-cli/setup:
-                aws-access-key-id: AWS_ACCESS_KEY_ID
-                aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-                aws-region: AWS_REGION
-            - restore_go_cache
-            - buildevents/berun:
-                bename: package
-                becommand: make package
-            - buildevents/berun:
-                bename: release
-                becommand: make release
+            - build_packages
+            - draft_github_release
+            - sync_s3_artifacts
 
 workflows:
   version: 2
