chore: fix commit message prefix for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,5 +14,5 @@ updates:
     reviewers:
       - "honeycombio/collection-team"
     commit-message:
-      prefix: "main"
+      prefix: "maint"
       include: "scope"
