--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  aws-cli: circleci/aws-cli@1.4.0
+  aws-cli: circleci/aws-cli@3.2.0
 
 # enable a job when tag created (tag create is ignored by default)
 # runs for all branches and all tags
@@ -92,8 +92,10 @@ jobs:
     executor: go
     steps:
       - install_ghr
-      - aws-cli/install
-      - aws-cli/setup
+      - aws-cli/setup:
+          role-arn: "arn:aws:iam::702835727665:role/circleci-public-repos"
+          role-session-name: "influx2hny"
+          aws-region: AWS_REGION
       - attach_workspace:
           at: .
       - build_packages
